header fix for fonts, colors, spacing

--- a/src/styles/components/_cart.scss
+++ b/src/styles/components/_cart.scss
@@ -56,12 +56,13 @@
     padding-right: 15px;
     position: relative;
     color: $red;
+    font-family: $sans;
     font-weight: 600;
     &:after {
       content: '';
       position: absolute;
       right: 0;
-      top: 5px;
+      top: 3px;
       width: 0; 
       height: 0; 
       border-top: 5px solid transparent;
