--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -13,6 +13,10 @@
     color: #fff;
     font-weight: 600;
   }
+  .cart__indicator {
+    display: inline-block;
+    margin-left:1rem;
+  }
 }
 
 .header--row {
@@ -33,7 +37,7 @@
 
 .cart--container {
   a.btn {
-    padding: 6px 12px 6px 0;
+    padding: 6px 0px 6px 0;
     .fa-2x {
       font-size: 20px;
     }
@@ -102,16 +106,17 @@
   text-transform: uppercase;
   padding-right: 15px;
   position: relative;
+  font-family: $sans;
   &:after {
     content: '';
     position: absolute;
     right: 0;
-    top: 5px;
+    top: 3px;
     width: 0; 
     height: 0; 
     border-top: 5px solid transparent;
     border-bottom: 5px solid transparent;
-    border-left: 5px solid $yellow;
+    border-left: 5px solid $light-green;
   }
 }
 
